fixed spacing

--- a/src/components/productivePage/toDoList/toDoList.css
+++ b/src/components/productivePage/toDoList/toDoList.css
@@ -30,7 +30,7 @@
   grid-row: 2/3;
   margin-top: 0px;
   grid-column: 1/4;
-  display: flex;
+  
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -69,7 +69,8 @@
   flex-direction: row;
   justify-content: space-evenly;
   height: 65%;
-  margin: 0px;
+ 
+ margin-top: 0.75%;
   padding: 0px;
   width: 100%;
 }
